nx-libs (2:3.5.0.12-0) UNRELEASED; urgency=low

  * Continue development...

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Feb 2012 15:05:38 +0100

nx-libs (2:3.5.0.11-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Use ,,$(MAKE) -C'' in main Makefile for calling Makefiles in subdirectories,
    make build stanza work for nx-libs-full and nx-libs-lite.
  * Do not install libXinerama directly into /usr/lib/nx. Recommended method is
    installing to /usr/lib/nx/Xinerama, so that you can enable/disable usage of
    the Xinerama extension.
  * Update patch: 001_add-main-makefile.full+lite.patch, use curly braces for
    macros.
  * Enable parallel build for Debian package.
  * Merge honor-ac-dirs.patch from Jan Engelhardt (OpenSUSE) with already
    existing Makefile patches (012_nxcomp..., 013_nxcompext_...,
    014_nxcompshad_...).
  * Rename patches 030_nx-X11_... and 031_nx-X11_..., the tarball roll script
    currently requires ,,full'' or ,,full+lite'' in the file name.
  * Make patch headers DEP5 compliant (030_nx-X11_... and 031_nx-X11_...).
  * Update patch: 001_add-main-makefile.full+lite.patch, fix missing
    $(CONFIGURE) variable.
  * Update patches: 012_nxcomp..., 013_nxcompext_..., 014_nxcompshad_....
    Also make use of $(LIBFULL) in Makefile.in's install and uninstall stanzas.
    Inspired by Jan Engelhardt's so-version.diff patch. However, the version
    name change requested in that patch has been rejected for
    NX (redistributed).
  * Apply patches for the Debian package as the last patches in the series.
  * Fix faulty patch name suffix (has to be .patch, not .diff).
  * Fix Xinerama support in Debian package libnx-x11 when NX gets built with
    patch 600_nx-X11+nxcompext+nxcompshad_unique-libnames.full.patch. Still on
    the todo list: fix the nx-X11 installation via Makefile.
  * Fine-tune symlinking of libXinerama.

  [ Jan Engelhardt ]
  * Update patch: 001_add-main-makefile.full+lite.patch, allow passing of