@@ -1,6 +1,8 @@
 nx-libs (2:3.5.0.12-0) UNRELEASED; urgency=low
 
-  * Continue development...
+  * Update patch: 001_add-main-makefile.full+lite.patch, adapt patch from
+    packaging. Test for Makefiles in subfolders before calling them.
+    Fixes build failure during ,,make distclean'' calls.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Feb 2012 15:05:38 +0100
 
